Leg3: Minimum Viable Product (MVP)
Google Cloud Platform is used to host pictures.
Imported Vocabulary database into SQLite.
Implemented "Word card" for 5 words {Press STUDY VOCABULARY}.

--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -28,7 +28,8 @@
                     android:layout_margin="10dp"
                     android:background="#005266"
                     android:gravity="center"
-                    android:text="@string/studyvocabulary"/>
+                    android:text="@string/studyvocabulary"
+                    android:id="@+id/bStudyVocab"/>
 
                 <Button
                     android:layout_width="match_parent"
