--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,10 +19,11 @@
             android:layout_height="wrap_content"
             android:fontFamily="Tahoma"
             android:textColor="#000000"
-            android:text="No. of New cards/day:"/>
+            android:text="@string/NoOfNewCardsDay"/>
 
         <EditText
             android:id="@+id/etNoNewCards"
+            android:labelFor="@+id/etNoNewCards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#000"
@@ -42,10 +42,11 @@
             android:layout_height="wrap_content"
             android:fontFamily="Tahoma"
             android:textColor="#000000"
-            android:text="No. of New Review/day:"/>
+            android:text="@string/NoOfNewReviewDay"/>
 
         <EditText
             android:id="@+id/etNoReviewCards"
+            android:labelFor="@+id/etNoReviewCards"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#000"
@@ -58,6 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:gravity="center"
-        android:text="Submit" />
+        android:textColor="#000000"
+        android:text="@string/Submit" />
 
 </LinearLayout>
