--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/blue_gradient"
+    android:orientation="vertical"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentStart="true"
     tools:context="com.gtatiya.flashvocab.HomeScreen">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true">
                 <ImageView
                     android:layout_width="match_parent"
                     android:contentDescription="@null"
@@ -33,6 +30,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_margin="10dp"
                     android:gravity="center"
+                    android:textColor="#000000"
                     android:text="@string/studyvocabulary"
                     android:id="@+id/bStudyVocab"/>
 
@@ -41,11 +39,8 @@
                     android:layout_height="55dp"
                     android:layout_margin="10dp"
                     android:gravity="center"
+                    android:textColor="#000000"
                     android:text= "@string/action_settings"
                     android:id="@+id/bSettings"/>
 
-
-            </LinearLayout>
-
-
-</RelativeLayout>
+</LinearLayout>
